# avn-parachain

./: .dockerignore  .gitignore  .rustfmt.toml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Cargo.toml  Dockerfile  Dockerfile.22_04  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  Upgrading.md  pallet_contribution_template.md  rust-toolchain.toml  zombienet-config.toml
client/external-service/: Cargo.toml
client/external-service/src/: ethereum_events_handler.rs  keystore_utils.rs  lib.rs
client/extrinsic-utils/: Cargo.toml
client/extrinsic-utils/src/: error.rs  extrinsic_utils.rs  lib.rs  merkle_tree_utils.rs
node/: Cargo.toml
node/avn-lower-rpc/: Cargo.toml
node/avn-lower-rpc-api/: Cargo.toml
node/avn-lower-rpc-api/src/: lib.rs
node/avn-lower-rpc/src/: lib.rs
node/avn-service/: .rustfmt.toml  Cargo.toml
node/avn-service/src/: ethereum_events_handler.rs  extrinsic_utils.rs  finance_provider_utils.rs  identify_eth_events.rs  keystore_utils.rs  lib.rs  merkle_tree_utils.rs  summary_utils.rs  timer.rs  web3_utils.rs
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs
node/src/: avn_config.rs  cli.rs  command.rs  common.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: mod.rs
node/src/chain_spec/stable/: local.rs  mod.rs  staging.rs
node/src/chain_spec/test/: local.rs  mod.rs  staging.rs
node/src/key/: insert_avn_key.rs  key.rs  mod.rs
node/src/rpc/: lower_rpc.rs
pallets/authors-manager/: Cargo.toml
pallets/authors-manager/src/: benchmarking.rs  default_weights.rs  lib.rs  migration.rs  mock.rs  tests.rs
pallets/avn/: Cargo.toml
pallets/avn-anchor/: Cargo.toml
pallets/avn-anchor/src/: benchmarking.rs  default_weights.rs  lib.rs  migration.rs  mock.rs  tests.rs
pallets/avn-consensus/: Cargo.toml
pallets/avn-consensus/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/avn-finality-tracker/: Cargo.toml
pallets/avn-finality-tracker/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs
pallets/avn-offence-handler/: Cargo.toml
pallets/avn-offence-handler/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/avn-oracle/: Cargo.toml
pallets/avn-oracle/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/avn-proxy/: Cargo.toml
pallets/avn-proxy/src/: benchmarking.rs  default_weights.rs  lib.rs
pallets/avn-proxy/src/tests/: mock.rs  proxy_tests_no_fees.rs  proxy_tests_with_fees.rs
pallets/avn-transaction-payment/: Cargo.toml
pallets/avn-transaction-payment/src/: benchmarking.rs  default_weights.rs  fee_adjustment_config.rs  fee_config.rs  lib.rs  mock.rs
pallets/avn-transaction-payment/src/tests/: adjustment_fee_tests.rs  base_fee_tests.rs  discount_fee_tests.rs  flexi_fee_tests.rs  mock.rs  set_known_sender_tests.rs
pallets/avn/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  vote.rs
pallets/avn/src/tests/: extension_builder.rs  mock.rs  session_handler_tests.rs  test_proxy_signed_add_avn_logs.rs  test_set_bridge_contract.rs  testing.rs  tests.rs
pallets/custom-voting/: Cargo.toml
pallets/custom-voting/src/: benchmarking.rs  default_weights.rs  lib.rs
pallets/custom-voting/src/tests/: mock.rs  tests.rs
pallets/eth-bridge/: Cargo.toml
pallets/eth-bridge/runtime-api/: Cargo.toml
pallets/eth-bridge/runtime-api/src/: lib.rs
pallets/eth-bridge/src/: benchmarking.rs  call.rs  default_weights.rs  eth.rs  lib.rs  migration.rs  offence.rs  request.rs  tx.rs  types.rs  util.rs  utils.rs
pallets/eth-bridge/src/tests/: event_listener_tests.rs  incoming_events_tests.rs  lower_proof_tests.rs  mock.rs  test_process_event.rs  tests.rs
pallets/ethereum-events/: Cargo.toml
pallets/ethereum-events/src/: benchmarking.rs  default_weights.rs  event_parser.rs  lib.rs  mock.rs  offence.rs
pallets/ethereum-events/src/tests/: session_handler_tests.rs  test_challenges.rs  test_ethereum_logs.rs  test_event_parser.rs  test_initial_events.rs  test_insert_nft_contract.rs  tests.rs  (+7 more)
pallets/ethereum-transactions/: Cargo.toml
pallets/ethereum-transactions/src/: benchmarking.rs  default_weights.rs  ethereum_transaction.rs  lib.rs  mock.rs
pallets/nft-manager/: Cargo.toml
pallets/nft-manager/src/: batch_nft.rs  benchmarking.rs  default_weights.rs  lib.rs  nft_data.rs
pallets/parachain-staking/: Cargo.toml  README.md  migrations.md
pallets/parachain-staking/src/: benchmarks.rs  calls.rs  lib.rs  migration.rs  migrations.rs  mock.rs  nomination_requests.rs  offence.rs  proxy_methods.rs  session_handler.rs  set.rs  test_admin_settings.rs  test_reward_payout.rs  test_staking_pot.rs  tests.rs  traits.rs  types.rs  vote.rs  weights.rs
pallets/summary/: Cargo.toml
pallets/summary/src/: benchmarking.rs  challenge.rs  default_weights.rs  lib.rs  migration.rs  offence.rs  types.rs  util.rs  utils.rs  vote.rs
pallets/token-manager/: Cargo.toml
pallets/token-manager/src/: benchmarking.rs  burn.rs  default_weights.rs  lib.rs  migration.rs  mock.rs  test_avt_tokens.rs  test_burn_tokens.rs  test_common_cases.rs  test_deferred_lower.rs  test_growth.rs  test_lower_proof_generation.rs  test_non_avt_tokens.rs  test_proxying_signed_lower.rs  test_proxying_signed_transfer.rs  treasury.rs
pallets/validators-manager/: Cargo.toml
pallets/validators-manager/src/: benchmarking.rs  confirmations.rs  default_weights.rs  lib.rs  migration.rs  mock.rs  offence.rs  proxy_helper.rs  tests.rs  tests_voting_deregistration.rs  vote.rs
primitives/avn-common/: Cargo.toml
primitives/avn-common/src/: context_constants.rs  eth_key_actions.rs  event_discovery.rs  event_types.rs  lib.rs  ocw_lock.rs  offchain_worker_storage_lock.rs  transaction_filter.rs  watchtower.rs
primitives/watchtower/: Cargo.toml
primitives/watchtower/src/: lib.rs
runtime/avn/: Cargo.toml  build.rs
runtime/avn/src/: apis.rs  benchmarks.rs  lib.rs  proxy_config.rs  xcm_config.rs
runtime/common/: Cargo.toml
runtime/common/src/: constants.rs  lib.rs
runtime/test/: Cargo.toml
runtime/test/src/: apis.rs  benchmarks.rs  lib.rs  proxy_config.rs  xcm_config.rs
(+97 files in other folders)
