[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[workspace.package]
version = "8.4.1"
authors = ["Aventus systems team"]
homepage = "https://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-node-parachain/"
edition = "2021"
rust-version = "1.84.1"

[workspace]
resolver = "2"
members = [
    "node",
    "client/*",
    "pallets/*",
    "pallets/*/runtime-api",
    "primitives/*",
    "runtime/*",
]
