[workspace.package]
version = "8.5.0"
authors = ["Aventus systems team"]
homepage = "https://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-node-parachain/"
edition = "2021"
rust-version = "1.85.0"

[workspace]
resolver = "2"
members = [
    "node",
    "node/primitives",
    "client/*",
    "pallets/*",
    "pallets/*/runtime-api",
    "primitives/*",
    "runtime/*",
]

[workspace.dependencies]
log = { version = "0.4.21", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
jsonrpsee = { version = "0.23.2", features = ["server"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
futures = "0.3.30"
jsonrpc-core = "18.0.0"
anyhow = "1.0.64"
clap = { version = "4.5.3", features = ["derive"] }

# Polkadot dependencies
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
