[workspace.package]
version = "8.5.0"
authors = ["Aventus systems team"]
homepage = "https://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-node-parachain/"
edition = "2021"
rust-version = "1.85.0"

[workspace]
resolver = "2"
members = [
    "node",
    "node/primitives",
    "client/*",
    "pallets/*",
    "pallets/*/runtime-api",
    "primitives/*",
    "runtime/*",
]

[workspace.dependencies]
log = { version = "0.4.21", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
jsonrpsee = { version = "0.24.3", features = ["server"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
futures = "0.3.30"
anyhow = "1.0.64"
clap = { version = "4.5.3", features = ["derive"] }
smallvec = "1.11.0"
docify = "0.2.8"
parking_lot = { version = "0.12.3" }

# Polkadot dependencies
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
# Substrate
frame = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409", features=["insecure_zero_ed"] }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-blockchain= { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
substrate-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }

pallet-assets = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sp-authority-discovery = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
pallet-offences = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
pallet-utility = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-conviction-voting = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-whitelist = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2409" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }

cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-pallet-session-benchmarking = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false}
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-primitives-storage-weight-reclaim = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }

# AvN pallets
sp-avn-common = { path = "./primitives/avn-common", default-features = false }
sp-watchtower = { path = "./primitives/watchtower", default-features = false }
pallet-avn-offence-handler = { path = "./pallets/avn-offence-handler", default-features = false }
pallet-validators-manager = { path = "./pallets/validators-manager", default-features = false }
pallet-ethereum-events = { path = "./pallets/ethereum-events", default-features = false }
pallet-avn = { path = "./pallets/avn", default-features = false }
pallet-proxy = { path = "./pallets/avn-proxy", default-features = false }
pallet-summary = { path = "./pallets/summary", default-features = false }
pallet-token-manager = { path = "./pallets/token-manager", default-features = false }
pallet-nft-manager = { path = "./pallets/nft-manager", default-features = false }
pallet-avn-proxy = { path = "./pallets/avn-proxy", default-features = false }
pallet-avn-transaction-payment = { path = "./pallets/avn-transaction-payment", default-features = false }
pallet-eth-bridge = { path = "./pallets/eth-bridge", default-features = false }
pallet-eth-bridge-runtime-api = { path = "./pallets/eth-bridge/runtime-api", default-features = false }
pallet-parachain-staking = { path = "./pallets/parachain-staking", default-features = false }
pallet-avn-anchor = { path = "./pallets/avn-anchor", default-features = false }

# Common Runtime
node-primitives = { path = "./node/primitives/", default-features = false }
runtime-common = { package = "avn-runtime-common", path = "./runtime/common", default-features = false }
avn-parachain-runtime = { path = "./runtime/avn/", default-features = false }
avn-test-runtime = { package = "avn-parachain-test-runtime", path = "./runtime/test/", default-features = false }

client-extrinsic-utils = { path = "./client/extrinsic-utils" }
avn-service = { package = "external-service", path = "./client/external-service" }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

