[package]
name = "avn-node-parachain"
description = "A Cumulus FRAME-based Substrate Node compatible with the AvN parachain"
license = "GPL-3.0"
build = "build.rs"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "avn-parachain-collator"
path = "src/main.rs"

[dependencies]
clap.workspace = true
log = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee.workspace = true
hex-literal = "0.4.1"
hex = { workspace = true, default-features = true }
serde_json = { version = "1.0.111", features = ["arbitrary_precision"] }
docify = "0.2.8"

futures = "0.3.28"
cfg-if = "0.1"

# Local
runtime-common.workspace = true
avn-parachain-runtime.workspace = true
avn-test-runtime = { workspace = true, optional = true }

# Substrate
frame-benchmarking = { default-features = true, workspace = true }
frame-benchmarking-cli = { default-features = true, workspace = true }
pallet-transaction-payment-rpc = { default-features = true, workspace = true }
sc-basic-authorship = { default-features = true, workspace = true }
sc-chain-spec = { default-features = true, workspace = true }
sc-cli = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-offchain = { default-features = true, workspace = true }
sc-consensus = { default-features = true, workspace = true }
sc-executor = { default-features = true, workspace = true }
sc-keystore = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-network-sync = { default-features = true, workspace = true }
sc-network-common = { default-features = true, workspace = true }
sc-rpc = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
sc-sysinfo = { default-features = true, workspace = true }
sc-telemetry = { default-features = true, workspace = true }
sc-tracing = { default-features = true, workspace = true }
sc-transaction-pool = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sp-block-builder = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus-aura = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
sp-offchain = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-session = { default-features = true, workspace = true }
sp-timestamp = { default-features = true, workspace = true }
sp-transaction-pool = { default-features = true, workspace = true }
substrate-frame-rpc-system = { default-features = true, workspace = true }
substrate-prometheus-endpoint = { default-features = true, workspace = true }
node-primitives.workspace = true

# AvN dependencies
sp-authority-discovery = { default-features = true, workspace = true }
pallet-im-online = { default-features = true, workspace = true }
sp-avn-common = { default-features = true, workspace = true }

# Polkadot
polkadot-cli = { default-features = true, workspace = true }
polkadot-primitives = { default-features = true, workspace = true }
polkadot-service = { default-features = true, workspace = true }
xcm = { default-features = true, workspace = true }

# Cumulus
cumulus-client-cli = { default-features = true, workspace = true }
cumulus-client-collator = { default-features = true, workspace = true }
cumulus-client-consensus-aura = { default-features = true, workspace = true }
cumulus-client-consensus-common = { default-features = true, workspace = true }
cumulus-client-consensus-proposer = { default-features = true, workspace = true }
cumulus-client-network = { default-features = true, workspace = true }
cumulus-client-service = { default-features = true, workspace = true }
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-primitives-parachain-inherent = { default-features = true, workspace = true }
cumulus-relay-chain-interface = { default-features = true, workspace = true }

# AvN
avn-service.workspace = true
pallet-eth-bridge = { default-features = true, workspace = true }
pallet-eth-bridge-runtime-api = { default-features = true, workspace = true }

pallet-avn = { default-features = true, workspace = true }
web3 = { version = "0.19.0", features = ["signing"] }

[build-dependencies]
substrate-build-script-utils = { default-features = true, workspace = true }

[features]
default = []

runtime-benchmarks = [
    "cumulus-primitives-core/runtime-benchmarks",
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "polkadot-cli/runtime-benchmarks",
    "polkadot-primitives/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "avn-parachain-runtime/runtime-benchmarks",
    "avn-test-runtime?/runtime-benchmarks",
]
try-runtime = [
    "polkadot-cli/try-runtime",
    "avn-parachain-runtime/try-runtime",
    "avn-test-runtime?/try-runtime",
]

[dev-dependencies]
tempfile = "3.1.0"
sp-version = { default-features = true, workspace = true }
